# Auto-Coder

./: .auto-coder.yaml.example  .code-crafter.yaml.example  README.md  pip.ini  pyproject.toml
.claude/: settings.local.json
src/auto_coder/: __init__.py  agent.py  auth.py  cli.py  config.py  project.py  repl.py
src/auto_coder/providers/: __init__.py  base.py  openai_compatible.py
src/auto_coder/state/: __init__.py  conversation.py
src/auto_coder/tools/: __init__.py  filesystem.py  registry.py  shell.py
src/code_crafter/: __init__.py  agent.py  cli.py  config.py  context.py  project.py  repl.py
src/code_crafter/providers/: openai_compatible.py
src/code_crafter/state/: conversation.py
src/code_crafter/tools/: __init__.py  edit_strategies.py  filesystem.py  registry.py  safety.py  shell.py
